--- a/src/backend/CodeLearning.Backend/CodeLearning.Infrastructure/CodeLearning.Infrastructure.csproj
+++ b/src/backend/CodeLearning.Backend/CodeLearning.Infrastructure/CodeLearning.Infrastructure.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="HtmlSanitizer" Version="9.0.889" />
     <PackageReference Include="Microsoft.AspNetCore.Identity" Version="2.3.1" />
     <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="10.0.0" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="10.0.0">
