--- a/src/backend/CodeLearning.Backend/CodeLearning.Tests/CodeLearning.Tests.csproj
+++ b/src/backend/CodeLearning.Backend/CodeLearning.Tests/CodeLearning.Tests.csproj
@@ -34,4 +34,8 @@
     <Using Include="Xunit" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Unit\Middleware\" />
+  </ItemGroup>
+
 </Project>
