--- a/src/backend/CodeLearning.Backend/CodeLearning.Application/CodeLearning.Application.csproj
+++ b/src/backend/CodeLearning.Backend/CodeLearning.Application/CodeLearning.Application.csproj
@@ -14,6 +14,7 @@
 
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="12.1.1" />
+	<PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
   </ItemGroup>
 
   <ItemGroup>
