--- a/src/backend/CodeLearning.Backend/CodeLearning.Runner.Tests/CodeLearning.Runner.Tests.csproj
+++ b/src/backend/CodeLearning.Backend/CodeLearning.Runner.Tests/CodeLearning.Runner.Tests.csproj
@@ -1,30 +1,30 @@
-﻿<Project Sdk="Microsoft.NET.Sdk">
+<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>net10.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <IsPackable>false</IsPackable>
+    <IsTestProject>true</IsTestProject>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Bogus" Version="35.6.5" />
-    <PackageReference Include="coverlet.collector" Version="6.0.4" />
-    <PackageReference Include="FluentAssertions" Version="8.8.0" />
-    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="10.0.1" />
+    <PackageReference Include="coverlet.collector" Version="6.0.4">
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="18.0.1" />
     <PackageReference Include="Moq" Version="4.20.72" />
-    <PackageReference Include="Testcontainers.PostgreSql" Version="4.9.0" />
     <PackageReference Include="xunit" Version="2.9.3" />
     <PackageReference Include="xunit.runner.visualstudio" Version="3.1.5">
-      <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+      <PrivateAssets>all</PrivateAssets>
     </PackageReference>
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\CodeLearning.Api\CodeLearning.Api.csproj" />
-    <ProjectReference Include="..\CodeLearning.Application\CodeLearning.Application.csproj" />
+    <ProjectReference Include="..\CodeLearning.Runner\CodeLearning.Runner.csproj" />
     <ProjectReference Include="..\CodeLearning.Core\CodeLearning.Core.csproj" />
     <ProjectReference Include="..\CodeLearning.Infrastructure\CodeLearning.Infrastructure.csproj" />
   </ItemGroup>
