--- a/src/frontend/codelearning-frontend/angular.json
+++ b/src/frontend/codelearning-frontend/angular.json
@@ -27,7 +27,8 @@
             ],
             "styles": [
               "src/styles.css",
-              "node_modules/monaco-editor/min/vs/editor/editor.main.css"
+              "node_modules/monaco-editor/min/vs/editor/editor.main.css",
+              "node_modules/highlight.js/styles/monokai-sublime.css"
             ]
           },
           "configurations": {
