--- a/src/frontend/codelearning-frontend/package.json
+++ b/src/frontend/codelearning-frontend/package.json
@@ -23,24 +23,27 @@
   "private": true,
   "packageManager": "npm@11.6.3",
   "dependencies": {
-    "@angular/common": "^21.0.0",
-    "@angular/compiler": "^21.0.0",
-    "@angular/core": "^21.0.0",
-    "@angular/forms": "^21.0.0",
-    "@angular/platform-browser": "^21.0.0",
-    "@angular/router": "^21.0.0",
+    "@angular/common": "^21.1.0",
+    "@angular/compiler": "^21.1.0",
+    "@angular/core": "^21.1.0",
+    "@angular/forms": "^21.1.0",
+    "@angular/platform-browser": "^21.1.0",
+    "@angular/router": "^21.1.0",
     "@types/dompurify": "^3.0.5",
+    "@types/highlight.js": "^9.12.4",
     "@types/marked": "^5.0.2",
     "dompurify": "^3.3.1",
+    "highlight.js": "^11.11.1",
+    "jwt-decode": "^4.0.0",
     "marked": "^17.0.1",
     "monaco-editor": "^0.55.1",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^21.0.4",
-    "@angular/cli": "^21.0.4",
-    "@angular/compiler-cli": "^21.0.0",
+    "@angular/build": "^21.1.0",
+    "@angular/cli": "^21.1.0",
+    "@angular/compiler-cli": "^21.1.0",
     "@tailwindcss/postcss": "^4.1.12",
     "jsdom": "^27.1.0",
     "postcss": "^8.5.3",
