--- a/src/backend/CodeLearning.Backend/docker/java/Dockerfile
+++ b/src/backend/CodeLearning.Backend/docker/java/Dockerfile
@@ -1,29 +1,33 @@
-FROM eclipse-temurin:21-jdk-jammy
+FROM mcr.microsoft.com/dotnet/sdk:10.0 AS agent-build
 
-# Install required tools for test execution
-# - time: GNU time with -v flag for memory measurement
-# - coreutils: basic Unix utilities
-# - jq: JSON processor for shell scripts
-# - bc: calculator for floating-point math
-# - bash: shell for running test scripts
-RUN apt-get update && apt-get install -y \
-    time \
-    coreutils \
-    jq \
-    bc \
-    bash \
+RUN apt-get update \
+    && apt-get install -y --no-install-recommends \
+       clang \
+       zlib1g-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Create app directory
+WORKDIR /src
+COPY ["CodeLearning.TestRunner/CodeLearning.TestRunner.csproj", "CodeLearning.TestRunner/"]
+COPY ["CodeLearning.Core/CodeLearning.Core.csproj", "CodeLearning.Core/"]
+RUN dotnet restore "CodeLearning.TestRunner/CodeLearning.TestRunner.csproj"
+COPY . .
+RUN dotnet publish "CodeLearning.TestRunner/CodeLearning.TestRunner.csproj" \
+    -c Release -r linux-x64 --self-contained true \
+    -p:PublishAot=true -p:InvariantGlobalization=true -p:StackTraceSupport=false -p:OptimizationPreference=Size \
+    -o /out
+
+
+FROM eclipse-temurin:21-jdk-jammy
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    bash \
+    time \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
-# Fix permissions: allow nobody user (65534) to write in /app
-RUN chmod 777 /app
+COPY --from=agent-build /out/CodeLearning.TestRunner /app/runner
 
-# Security: Run as non-privileged user (will be set by Docker runner)
-# Note: User will be set to nobody (65534:65534) by DockerRunner
+RUN chmod +x /app/runner && chmod 777 /app
 
-# Metadata
-LABEL org.opencontainers.image.title="CodeLearning Java Executor"
-LABEL org.opencontainers.image.description="Eclipse Temurin JDK 21 with test execution tools"
-LABEL org.opencontainers.image.version="21"
+CMD ["tail", "-f", "/dev/null"]
