--- a/src/backend/CodeLearning.Backend/CodeLearning.Runner/Dockerfile
+++ b/src/backend/CodeLearning.Backend/CodeLearning.Runner/Dockerfile
@@ -1,4 +1,9 @@
 FROM mcr.microsoft.com/dotnet/aspnet:10.0 AS base
+
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    libgssapi-krb5-2 \
+    && rm -rf /var/lib/apt/lists/*
+
 WORKDIR /app
 
 FROM mcr.microsoft.com/dotnet/sdk:10.0 AS build
