--- a/src/backend/CodeLearning.Backend/docker-compose.yml
+++ b/src/backend/CodeLearning.Backend/docker-compose.yml
@@ -162,34 +162,34 @@ services:
   # Build them with: docker compose build executor-python executor-node executor-csharp executor-java
   
   executor-python:
-    image: codelearning/python:3.14.2-alpine
+    image: codelearning/python:3.12-slim
     build:
-      context: ./docker/python
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/python/Dockerfile
     profiles:
-      - executors  # Don't start by default, only build
+      - executors
 
   executor-node:
-    image: codelearning/node:25.2.1-alpine
+    image: codelearning/node:22-slim
     build:
-      context: ./docker/node
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/node/Dockerfile
     profiles:
       - executors
 
   executor-csharp:
     image: codelearning/dotnet:10.0
     build:
-      context: ./docker/csharp
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/csharp/Dockerfile
     profiles:
       - executors
 
   executor-java:
     image: codelearning/java:21-jdk
     build:
-      context: ./docker/java
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: docker/java/Dockerfile
     profiles:
       - executors
 
